# ironweave

./: .gitignore  Cargo.toml  README.md  ironweave.toml.example
deploy/: build.sh  ironweave.service  ironweave.toml.example  sudoers-ironweave
docs/: BACKEND_FEATURES.md  FRONTEND_FEATURES.md
docs/plans/: 2026-03-11-ironweave-design.md  2026-03-11-ironweave-v1-implementation.md  2026-03-12-agent-completion-design.md  2026-03-12-agent-completion-plan.md  2026-03-12-directory-browser-mounts-design.md  2026-03-12-directory-browser-mounts-implementation.md  2026-03-12-orchestrator-loop-design.md  2026-03-12-orchestrator-loop-plan.md  2026-03-12-project-detail-enhancements-design.md  2026-03-12-project-detail-enhancements-plan.md  2026-03-12-pty-agent-terminals-design.md  2026-03-12-pty-agent-terminals-plan.md  2026-03-12-settings-proxy-design.md  2026-03-12-settings-proxy-implementation.md  2026-03-12-team-dispatch-design.md  2026-03-12-team-dispatch-plan.md  2026-03-12-teams-model-selection-design.md  2026-03-12-teams-model-selection-plan.md  2026-03-13-agent-context-plan-importer-design.md  2026-03-13-agent-context-plan-importer-plan.md  2026-03-13-intake-agent-design.md  2026-03-13-intake-agent-plan.md  2026-03-13-intake-chat-design.md  2026-03-13-intake-chat-plan.md  2026-03-13-project-app-preview-design.md  2026-03-13-project-app-preview-plan.md  2026-03-13-v1-gap-closure-design.md  (+10 more)
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: audit-features.py
src/: config.rs  error.rs  lib.rs  main.rs  state.rs
tests/: integration_tests.rs
(+213 files in other folders)
