[package]
name = "ironweave"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-tungstenite = "0.24"
axum-extra = { version = "0.10", features = ["typed-header"] }
thiserror = "2"
git2 = "0.20"
toml = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rust-embed = "8"
mime_guess = "2"
async-trait = "0.1"
portable-pty = "0.8"
futures-util = "0.3"
argon2 = "0.5"
rand = "0.8"
aes-gcm = "0.10"
base64 = "0.22"
regex = "1"
sysinfo = "0.33"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
